# hotel-booking-cancelation

./: .gitignore  README.md
model_build/: data_exploration.ipynb  hyperparameter_tuning.ipynb  model_benchmark.ipynb  pyproject.toml
model_build/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb  model_benchmark-Copy1-checkpoint.ipynb  model_benchmark-checkpoint.ipynb  pyproject-checkpoint.toml
myenv/: pyvenv.cfg
webapp/: app.py  classifier.py  ml_elements.py  pyproject.toml
