[project]
name = "webapp"
version = "0.1.0"
description = ""
authors = [
    {name = "mandresyandri",email = "mandresy.andriantsoanavalona@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "boto3 (>=1.39.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
